Fix z-index of search dropdown arrow

--- a/ui/stylesheets/cloudstack.scss
+++ b/ui/stylesheets/cloudstack.scss
@@ -236,7 +236,7 @@ body {
             left: 215px;
             top: 10px;
             cursor: pointer;
-            z-index: 10000;
+            z-index: 10;
         }
 
         .form-container {
